modified controller (refactoring)
